--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,7 @@ node_modules/
 /uploads/
 
 # Sensitive backend configs (use the *.example.php templates instead)
-/tripko-backend/config/Database.php
-/tripko-backend/config/db.php
+# Database.php and db.php now use env vars, safe to track
 /tripko-backend/config/mail_config.php
 /tripko-backend/config/sms_config.php
 /tripko-backend/config/debug.php
