Security cleanup: remove Railway scripts and re-hide DB configs
- Deleted import_to_railway.php and test scripts with creds
- Restored .gitignore to hide Database.php and db.php
- Simplified Database.php to local-only (localhost:3307)
- Removed DB config files from git index

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,9 @@ node_modules/
 # App runtime/uploads (don’t version user uploads)
 /uploads/
 
-# Sensitive backend configs (use the *.example.php templates instead)
-# Database.php and db.php now use env vars, safe to track
+# Sensitive backend configs (re-hide DB connection files)
+/tripko-backend/config/Database.php
+/tripko-backend/config/db.php
 /tripko-backend/config/mail_config.php
 /tripko-backend/config/sms_config.php
 /tripko-backend/config/debug.php
